[tool.poetry]
name = "test-endpoint"
version = "0.1.0"
description = ""
authors = ["NixonInnes <nixoninnes@echonet.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
